styles/partials/_logo.scss
.logo {
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  max-height: 1.5rem;
  margin: 0;
  line-height: 1;
  text-transform: uppercase;
  position: relative;
  z-index: 10;

  .title {
    font-size: 1.25rem;
    font-weight: 800;
    line-height: 1;
  }

  svg {
    flex-shrink: 0;
    width: 60px;

    .logo-svg-background {
      fill: transparent;
    }

    .logo-svg-shape {
      fill: var(--text-color);
      @include transition(fill, var(--transition-time));
    }
  }

  &:hover,
  &:focus {
    svg {
      .logo-svg-shape {
        fill: var(--main-color);
      }
    }
  }

  @include mobile {
    max-height: 1.5rem;
    margin-bottom: 0cap;
  }

  @include maxWidth(310px) {
    .title {
      display: none;
    }
  }
}

